--- a/views/docs.html
+++ b/views/docs.html
@@ -13,7 +13,7 @@
 </head>
 <body id="body" class="dark">
 <div class="modal">
-<img src="https://telegra.ph/file/8eb0bb3dda0f392f8179b.jpg" alt="img">
+<img src="https://telegra.ph/file/2f6a75903b84b8f918c66.jpg" alt="img">
 <div class="close"></div>
 </div>
 <div id="container" class="container">
@@ -21,7 +21,7 @@
 <div class="card">
 <div class="sidebar" id="sidebar">
 <ul>
-<li><a class="active" href="https://tiodevhost.my.id">My Portofolio</a></li>
+<li><a class="active" href="https://instagram.com/Restuadza154">My Instagram</a></li>
 </ul>
 </div>
 <div class="header">
@@ -39,8 +39,8 @@
 <i class="fas fa-camera fa-2x"></i>
 </div>
 </div>
-<h3 class="name">BOTCAHX</h3>
-<h3 class="sub-name">@prm2.0</h3>
+<h3 class="name">KENZY</h3>
+<h3 class="sub-name">@Kenzy</h3>
 </div>
 </div>
 <div class="content">
@@ -50,10 +50,10 @@
 <p class="text">API adalah mekanisme yang memungkinkan dua komponen perangkat lunak untuk berkomunikasi satu sama lain menggunakan sekumpulan definisi dan protokol.</p>
 </div>
 <div class="icons-container">
-<a href="https://github.com/BOTCAHX" class="icon">
+<a href="https://github.com/Restuadza" class="icon">
 <i class="fab fa-github"></i>
 </a>
-<a href="https://instagram.com/prm2.0" class="icon">
+<a href="https://instagram.com/Restuadza154" class="icon">
 <i class="fab fa-instagram"></i>
 </a>
 <a href="" class="icon">
